# DogePhysics

./: .gitmodules  CMakeLists.txt  README.md  methodology.txt
resources/: cat.tga
src/: main.cpp
src/Demo/Fireworks/: FireworksDemo.cpp
src/Demo/XPBD/: Ball.hpp  Joint.hpp  World.hpp  XPBD.cpp
src/DogeEngine/IO/: SceneParser.hpp
src/DogeEngine/Scene/: GameObject.hpp  SceneGraph.hpp
src/DogeEngine/Scene/Objects/: Cube.hpp  Empty.hpp
src/DogePhysics/: Collideable.hpp  Group.hpp  Transformable.hpp  Updateable.hpp
src/DogePhysics/Collisions/Colliders/: BoxCollider.hpp  CapsuleCollider.hpp  Collider.hpp  CompoundCollider.hpp  SDFCollider.hpp  SphereCollider.hpp
src/DogePhysics/Collisions/Layers/: CollisionLayer.hpp  CompoundLayer.hpp  SimpleLayer.hpp
src/DogePhysics/Collisions/Layers/Octree/: OctreeLayer.hpp  StaticOctreeLayer.hpp
src/DogePhysics/Constraints/: Constraint.hpp  ConstraintManager.hpp
src/DogePhysics/Constraints/Fixed/: DistanceConstraint.hpp  DistanceConstraintRigid.hpp  Spring.hpp
src/DogePhysics/Constraints/Groups/: CollisionSolver.hpp  SimpleFloor.hpp
src/DogePhysics/ForceCalculators/: ForceCalculator.hpp  SimpleDrag.hpp
src/DogePhysics/ForceCalculators/Groups/: UniversalGravitation.hpp
src/DogePhysics/Objects/: Physical.hpp  Static.hpp
src/DogePhysics/Objects/XPBD/: Constrainable.hpp  RigidBody.hpp
src/DogePhysics/PhysicsObjects/: PhysicsObject.hpp  PositionablePhysicsObject.hpp
src/DogePhysics/PhysicsObjects/Calculators/: ComplexDrag.hpp  ForceCalculator.hpp  SimpleDrag.hpp  SimpleGravity.hpp
src/DogePhysics/PhysicsObjects/Particles/: LifetimeParticle.hpp  Particle.hpp
src/Renderer/: Camera.hpp  InputManager.hpp  MagnumApplication.hpp  MagnumRenderer.hpp  Renderer.hpp
src/Utils/: BoundingBox.hpp  BoundingSphere.hpp  Matrix3.hpp  Matrix4.hpp  Quaternion.hpp  Random.hpp  Transform.hpp  Vector3.hpp  real.hpp
src/Utils/Generators/: CarGenerator.hpp
(+12 files in other folders)
